# after-effects

./: .gitignore  API_AUDIT_REPORT.md  AUDIT_REPORT.md  AdobePlugin.just  CLAUDE-AUDIT.md  CROSS_COMPILATION_ON_LINUX.md  Cargo.toml  Justfile  PUBLIC_API_INVENTORY.md  README.md  README.tpl  REMAINING_WORK.md  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: test.yaml
after-effects/: Cargo.toml  README.md
after-effects-sys/: Cargo.toml  README.md  bindings_macos.rs  bindings_win.rs  build.rs  wrapper.hpp
after-effects-sys/src/: lib.rs
after-effects/src/: aeio.rs  cross_thread_type.rs  lib.rs  macros.rs  plugin_base.rs  pr.rs  pr_string.rs  tests.rs
after-effects/src/aegp/: mod.rs  scene_3d.rs
after-effects/src/aegp/suites/: camera.rs  canvas.rs  color_settings.rs  command.rs  comp.rs  composite.rs  compute_cache.rs  effect.rs  footage.rs  hash.rs  io_in.rs  item.rs  keyframe.rs  layer.rs  layer_render_options.rs  light.rs  mask.rs  memory.rs  output_module.rs  persistent_data.rs  pf_interface.rs  project.rs  register.rs  render.rs  render_async_manager.rs  render_options.rs  render_queue.rs  render_queue_item.rs  scene_3d.rs  sound_data.rs  stream.rs  utility.rs  world.rs
after-effects/src/drawbot/: mod.rs
after-effects/src/drawbot/suites/: supplier.rs  surface.rs
after-effects/src/pf/: command.rs  effect.rs  events.rs  external_dependencies.rs  gpu.rs  handles.rs  in_data.rs  interact_callbacks.rs  layer.rs  mod.rs  out_data.rs  parameters.rs  pixel.rs  render.rs  util_callbacks.rs
after-effects/src/pf/suites/: adv_item.rs  app.rs  background_frame.rs  cache_on_load.rs  channel.rs  color_callbacks.rs  custom_ui.rs  effect_sequence_data.rs  effect_ui.rs  fill_matte.rs  gpu_device.rs  handle.rs  helper.rs  iterate.rs  param_utils.rs  path.rs  pixel_data.rs  pixel_format.rs  source_settings.rs  transition.rs  utility.rs  world.rs  world_transform.rs
examples/aegp/: Cargo.toml  Justfile  README.md  build.rs
examples/aegp/src/: img_proc.rs  lib.rs  window_handle.rs
examples/background_task/: Cargo.toml  Justfile  build.rs
examples/background_task/src/: lib.rs
examples/checkout/: Cargo.toml  Justfile  build.rs
examples/checkout/src/: lib.rs
examples/color_grid/: Cargo.toml  Justfile  build.rs
examples/color_grid/src/: lib.rs  ui.rs
examples/convolutrix/: Cargo.toml  Justfile  build.rs
examples/convolutrix/src/: lib.rs
examples/custom_comp_ui/: Cargo.toml  Justfile  build.rs
examples/custom_comp_ui/src/: lib.rs  ui.rs
examples/custom_ecw_ui/: Cargo.toml  Justfile  build.rs
examples/custom_ecw_ui/src/: events.rs  lib.rs
examples/gamma_table/: Cargo.toml  Justfile  build.rs
examples/gamma_table/src/: lib.rs
examples/histo_grid/: Cargo.toml  Justfile  build.rs
examples/histo_grid/src/: lib.rs  ui.rs
examples/paramarama/: Cargo.toml  Justfile  build.rs
examples/paramarama/src/: lib.rs
examples/persisto/: Cargo.toml  Justfile  README.md  build.rs
examples/persisto/src/: lib.rs
examples/portable/: Cargo.toml  Justfile  build.rs
examples/portable/src/: lib.rs
examples/queuebert/: Cargo.toml  Justfile  build.rs
examples/queuebert/src/: lib.rs
examples/resizer/: Cargo.toml  Justfile  build.rs
examples/resizer/src/: lib.rs
examples/rust_gpu/: Cargo.toml  Justfile  build.rs  shader.spv  shader.wgsl
examples/rust_gpu/spirv/: Cargo.toml
examples/rust_gpu/spirv/src/: lib.rs
examples/rust_gpu/spirv_builder/: Cargo.toml  build.rs
examples/rust_gpu/spirv_builder/src/: main.rs
examples/rust_gpu/src/: lib.rs  wgpu_proc.rs
examples/sdk_invert_procamp/: Cargo.toml  Justfile  build.rs
examples/sdk_invert_procamp/src/: filter_image_cpu.rs  lib.rs
examples/sdk_noise/: Cargo.toml  Justfile  build.rs
examples/sdk_noise/src/: lib.rs
examples/simplest/: Cargo.toml  Justfile  build.rs
examples/simplest/src/: lib.rs
examples/simulate/: Cargo.toml  Justfile  build.rs
examples/simulate/src/: lib.rs  simulation.rs
examples/supervisor/: Cargo.toml  Justfile  build.rs
examples/supervisor/src/: lib.rs
examples/transformer/: Cargo.toml  Justfile  build.rs
examples/transformer/src/: lib.rs
pipl/: Cargo.toml  README.md
pipl/src/: lib.rs  plist.rs  resource.rs
pipl/tests/: mod.rs
premiere/: Cargo.toml  README.md  build.rs
premiere-sys/: Cargo.toml  README.md  bindings_macos.rs  bindings_win.rs  build.rs  wrapper.hpp
premiere-sys/src/: lib.rs
premiere/src/: gpu_filter.rs  lib.rs  macros.rs  pixel_format.rs  types.rs
premiere/src/pf_suites/: background_frame.rs  cache_on_load.rs  pixel_format.rs  source_settings.rs  transition.rs  utility.rs
premiere/src/suites/: gpu_device.rs  gpu_image_processing.rs  memory_manager.rs  mod.rs  opaque_effect_data.rs  ppix.rs  sequence_info.rs  string.rs  time.rs  video_segment.rs  video_segment_properties.rs  window.rs
premiere/src/utils/: video_sequence_parser.rs
src/: aegp.rs  aeio.rs  cross_thread_type.rs  drawbot.rs  lib.rs  macros.rs  pf.rs  plugin_base.rs  pr.rs  pr_string.rs
src/aegp/: mod.rs  scene_3d.rs
src/aegp/suites/: camera.rs  canvas.rs  color_settings.rs  comp.rs  composite.rs  effect.rs  footage.rs  io_in.rs  item.rs  keyframe.rs  layer.rs  layer_render_options.rs  light.rs  mask.rs  memory.rs  pf_interface.rs  render.rs  render_async_manager.rs  sound_data.rs  stream.rs  utility.rs  world.rs
src/drawbot/: mod.rs
src/drawbot/suites/: draw.rs  image.rs  path.rs  pen.rs  supplier.rs  surface.rs
src/pf/: command.rs  effect.rs  events.rs  external_dependencies.rs  gpu.rs  handles.rs  in_data.rs  interact_callbacks.rs  layer.rs  mod.rs  out_data.rs  parameters.rs  pixel.rs  render.rs  util_callbacks.rs
src/pf/suites/: adv_item.rs  app.rs  background_frame.rs  cache_on_load.rs  channel.rs  color_callbacks.rs  custom_ui.rs  effect_sequence_data.rs  effect_ui.rs  gpu_device.rs  handle.rs  helper.rs  iterate.rs  mod.rs  param_utils.rs  pixel_format.rs  transition.rs  utility.rs  world.rs  world_transform.rs
