[package]
name = "aftereffects"
version = "0.1.6"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"

[features]
artisan-2-api = ["aftereffects-sys/artisan-2-api"]
default = []

[dependencies]
aftereffects-sys = { git = "https://github.com/virtualritz/aftereffects-sys" }
bincode = "1.3.3"
bitflags = "1.3.2"
bytemuck = "1.7.3"
c_vec = "2.0.0"
function_name = "0.2.0"
nalgebra = { version = "0.30.1", optional = true }
ultraviolet = { version = "0.8.1", features = [ "f64" ], optional = true }
num_enum = "0.5.6"
num-traits = "0.2.14"
#cgmath = { version = "^0.17.0", optional = true }
#mint = { version = "^0.5.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
#serde_cbor = "0.11.1"
serde_json = "1.0.78"
widestring = "0.5.1"

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 3
