[package]
name = "after-effects"
version = "0.1.6"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
edition = "2021"
exclude = [".github/**/*", "crates/**/*"]
description = "High(er) level bindings for the Adobe After Effects® SDK."
keywords = ["motion-graphics", "after-effects", "graphics", "plugins"]
categories = ["graphics", "multimedia::video", "rendering::graphics-api"]
readme = "README.md"
homepage = "https://developer.adobe.com/content/udp/en/apis/creativecloud/aftereffects.html"
repository = "https://github.com/virtualritz/after-effects/"

[features]
artisan-2-api = ["after-effects-sys/artisan-2-api"]
default = []

[dependencies]
after-effects-sys = { path = "after-effects-sys" }
bincode = "1.3.3"
bitflags = "2.4.2"
c_vec = "2.0.0"
nalgebra = { version = "0.32.3", optional = true }
ultraviolet = { version = "0.9.2", features = [ "f64" ], optional = true }
num_enum = "0.7.1"
num-traits = "0.2.17"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
widestring = "1.0.2"
