[package]
name = "after-effects"
version = "0.1.6"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
edition = "2021"
exclude = [".github/**/*", "crates/**/*"]
description = "High(er) level bindings for the Adobe After Effects® SDK."
keywords = ["motion-graphics", "after-effects", "graphics", "plugins"]
categories = ["graphics", "multimedia::video", "rendering::graphics-api"]
readme = "README.md"
homepage = "https://developer.adobe.com/content/udp/en/apis/creativecloud/aftereffects.html"
repository = "https://github.com/virtualritz/after-effects/"

[features]
artisan-2-api = ["after-effects-sys/artisan-2-api"]
catch-panics = []
default = []

[dependencies]
after-effects-sys = { path = "../after-effects-sys" }
bincode = "1.3.3"
bitflags = "2.6.0"
nalgebra = { version = "0.33", optional = true }
ultraviolet = { version = "0.9.2", features = [ "f64" ], optional = true }
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
widestring = "1.1.0"
log = "0.4"
cstr-literal = "0.1"
paste = "1"
parking_lot = "0.12"
fastrand = "2.1"
hash32 = "0.3"
once_cell = "1.19"

[target.'cfg(target_os = "windows")'.dependencies]
win_dbg_logger = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"
