[package]
name = "after-effects"
version = "0.3.0"
authors = [
    "Adrian Eddy <adrian.eddy@gmail.com>, Moritz Moeller <virtualritz@protonmail.com>",
]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
edition = "2024"
description = "High level bindings for the Adobe After Effects® SDK"
keywords = ["motion-graphics", "after-effects", "graphics", "plugins"]
categories = ["graphics", "multimedia::video", "rendering::graphics-api"]
readme = "../README.md"
homepage = "https://developer.adobe.com/after-effects/"
repository = "https://github.com/virtualritz/after-effects/"

[features]
artisan-2-api = ["after-effects-sys/artisan-2-api"]
default = []

[dependencies]
after-effects-sys = "0.3"                                              #{path = "../after-effects-sys"}
bincode = { version = "2.0", features = ["serde"] }
bitflags = "2.9"
cstr-literal = "0.1"
fastrand = "2"
hash32 = "1"
log = "0.4"
nalgebra = { version = "0.34", optional = true }
num-traits = "0.2"
once_cell = "1.21"
parking_lot = "0.12"
paste = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ultraviolet = { version = "0.10", features = ["f64"], optional = true }
widestring = "1.2"

[target.'cfg(target_os = "windows")'.dependencies]
win_dbg_logger = "0.1"
windows-sys = { version = "0.61", features = [ "Win32_Globalization" ] }

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"
objc2-core-foundation = "0.3"
