[package]
name = "pipl"
version = "0.1.1"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["tests"]
description = "Library for building Adobe's PiPL plugin info resource"
keywords = ["motion-graphics", "adobe", "after-effects", "premiere", "plugins"]
categories = ["graphics", "multimedia::video", "rendering::graphics-api"]
repository = "https://github.com/virtualritz/after-effects/"

[lib]
name = "pipl"

[dependencies]
bitflags = "2.6"
byteorder = "1.5"
pretty-hex = "0.4"
winres = "0.1"

[dev-dependencies]
pretty-hex = "0.4"
similar-asserts = "1.6.0"
