[package]
name = "premiere"
version = "0.2.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>", "Adrian <adrian.eddy@gmail.com>"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
edition = "2021"
exclude = [".github/**/*", "crates/**/*"]
description = "High level bindings for the Adobe Premiere® SDK."
keywords = ["motion-graphics", "premiere", "graphics", "plugins"]
categories = ["graphics", "multimedia::video", "rendering::graphics-api"]
homepage = "https://developer.adobe.com/premiere-pro/"
repository = "https://github.com/virtualritz/after-effects/"

[dependencies]
premiere-sys = { path = "../premiere-sys" }
log = "0.4"
fastrand = "2.1"
parking_lot = "0.12"
base64 = "0.22"
bitflags = "2.6"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
