[package]
name = "premiere"
version = "0.2.1"
authors = [
    "Adrian Eddy <adrian.eddy@gmail.com>",
    "Moritz Moeller <virtualritz@protonmail.com>",
]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
edition = "2024"
readme = "../README.md"
description = "High level bindings for the Adobe Premiere® SDK"
keywords = ["motion-graphics", "premiere", "graphics", "plugins"]
categories = ["graphics", "multimedia::video", "rendering::graphics-api"]
homepage = "https://developer.adobe.com/premiere-pro/"
repository = "https://github.com/virtualritz/after-effects/"

[dependencies]
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
bitflags = "2.9"
fastrand = "2.3"
log = "0.4"
parking_lot = "0.12"
premiere-sys = "0.3"                               #{ path = "../premiere-sys" }
serde = { version = "1.0", features = ["derive"] }
