[package]
name = "custom_ecw_ui"
version = "0.0.1"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pipl = { path = "../../pipl" }
