[package]
name = "rustgpu"
version = "0.0.1"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { path = "../../after-effects" }
log = "0.4"
wgpu = { version = "25.0", features = ["spirv"] }
pollster = "0.4"
futures-intrusive = "0.5"
parking_lot = "0.12"
num_cpus = "1.17"

[build-dependencies]
pipl = { path = "../../pipl" }
