[package]
name = "simulate"
version = "0.0.1"
authors = ["mobile-bungalow"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { path = "../../after-effects" }
fastrand = "2"

[build-dependencies]
pipl = { path = "../../pipl" }
