[package]
name = "supervisor"
version = "0.0.1"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { path = "../../after-effects" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
pipl = { path = "../../pipl" }
