[package]
name = "shader_builder"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]

[build-dependencies]
spirv-builder = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3